	* Internal/Project/Combine/Combine.cs:
	* Gui/Dialogs/OptionPanels/ProjectOptions/DeployFileOptions.cs:
	use MonoDevelop.Gui.Widgets.FileSelector instead of Gtk.FileSelection

	* Gui/Pads/HelpBrowser/HelpViewer.cs: set IsViewOnly property to true
	so we don't crash on save

	* Gui/Pads/ProjectBrowser/BrowserNode/FileNode.cs:
	do not force an extension on renamed files
	fixes bug # 59677

2004-06-16  John Luke  <jluke@cfl.rr.com>

	* Gui/Dialogs/NewProjectDialog.cs: guard against unauthorized
	exception when creating the project directory, and display an error
	message and allow the user to fix it.
	fixes bug # 60001

2004-06-13  Todd Berman  <tberman@sevenl.net>

	* Internal/Project/Project/Deployment/ScriptDeploy.cs: string fix

2004-06-11  Todd Berman  <tberman@sevenl.net>

	* Services/SystemAssemblyService.cs: Dont scan the same path twice.

2004-06-10  Lluis Sanchez Gual  <lluis@ximian.com>

	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs: Set the project of
	  newly added files.
	* Services/ParserService/DefaultParserService.cs: Generate and cache code
	  completion databases for opened files that do not belong to any project.
	* Services/ParserService/CodeCompletionDatabase.cs: Added Clear method.
	  Made Write() virtual. 
	  Added new SimpleCodeCompletionDatabase, for storing information for a
	  single file.
	* Internal/Project/Project/AbstractProject.cs: Ignore members with the
	  xml name set to null.
	* Internal/Project/Project/ProjectFile.cs: Added project filed. Notify
	  the project when the file name changes.
	* Internal/Project/Project/Collections/ProjectFileCollection.cs: assign
	  the project to the files in the collection.

2004-06-06  John Luke  <jluke@cfl.rr.com>

	* Gui/Dialogs/CommonAboutDialog.cs: make the scrollbox not expand
	fixes bug #59652

2004-06-02  Todd Berman  <tberman@sevenl.net>

	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs: call new func.
	* Gui/Dialogs/NewFileDialog.cs: remove dead code